--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <!-- Ligação aos ficheiros geojson-->
 <script src="PTconc.geojson"></script>
+<script src="PTnutsiii.geojson"></script>
 
 
 <html>
