--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 <script src="dist/concelhos_v3.geojson"></script>
 <script src="dist/nutsiii_v3.geojson"></script>
 <script src="dist/sedes.geojson"></script>
+<script src="dist/distritos.geojson"></script>
+<script src="dist/ilhas.geojson"></script>
+<script src="dist/nuts2.geojson"></script>
 
 <html>
     <head>
